--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 </head>
 
 <body>
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 
     <main>
         <div class="header fixed">
@@ -40,9 +41,10 @@
                 <div class="restaurant-nav">
                     <img src="assets/images/restaurant.png" alt="imgResta">
                     <span>Restaurante</span>
-                    <svg class="arrow-nav" width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><g transform="translate(-386 -165)" fill="red" fill-rule="nonzero"><g id="icon_seta_restaurantes" transform="translate(386 165)"><path d="M17.414 18.548a2.099 2.099 0 0 0-2.828 0 1.787 1.787 0 0 0 0 2.646L24 30l9.414-8.806a1.787 1.787 0 0 0 0-2.646 2.099 2.099 0 0 0-2.828 0L24 24.708l-6.586-6.16z" id="Path-5-Copy-3"></path></g></g></svg>
+                    <svg class="arrow-nav" width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg" data-toggle="popover" data-bs-placement="bottom" title="Popover"><g transform="translate(-386 -165)" fill="red" fill-rule="nonzero"><g id="icon_seta_restaurantes" transform="translate(386 165)"><path d="M17.414 18.548a2.099 2.099 0 0 0-2.828 0 1.787 1.787 0 0 0 0 2.646L24 30l9.414-8.806a1.787 1.787 0 0 0 0-2.646 2.099 2.099 0 0 0-2.828 0L24 24.708l-6.586-6.16z" id="Path-5-Copy-3"></path></g></g></svg>
 
                 </div>
+
 
                 <div class="search">
                     <img src="assets/images/search.svg" alt="" />
